--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section id="app">
+    <section class="user-goal" id="app">
       <header>
         <h1>Vue Course Goals</h1>
       </header>
