add_event_computed_watch

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p>{{ name }}</p>
       <div>{{ students }}</div>
       <p v-if="seen">Bạn đang thấy tôi</p>
-
+      <p>{{ demoMethodReturnText() }}</p>
     </section>
     <script src="https://unpkg.com/vue@next"></script>
     <script src="app.js"></script>
